[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/box.gd" type="Script" id=1]
[ext_resource path="res://assets/box anim-Sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/Place pieces.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.50528, 7.41901 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform float outLineSize  = 0.02;
uniform vec4  outLineColor = vec4(1.0, 1.0, 1.0, 1.0);

void fragment()
{
    vec4 tcol = texture(TEXTURE, UV);
    
    if (tcol.a == 0.0)
    {
        if (texture(TEXTURE, UV + vec2(0.0,          outLineSize)).a  != 0.0 ||
            texture(TEXTURE, UV + vec2(0.0,         -outLineSize)).a  != 0.0 ||
            texture(TEXTURE, UV + vec2(outLineSize,  0.0)).a          != 0.0 ||
            texture(TEXTURE, UV + vec2(-outLineSize, 0.0)).a          != 0.0 ||
            texture(TEXTURE, UV + vec2(-outLineSize, outLineSize)).a  != 0.0 ||
            texture(TEXTURE, UV + vec2(-outLineSize, -outLineSize)).a != 0.0 ||
            texture(TEXTURE, UV + vec2(outLineSize,  outLineSize)).a  != 0.0 ||
            texture(TEXTURE, UV + vec2(outLineSize,  -outLineSize)).a != 0.0) 
            tcol = outLineColor;
    }
    
    COLOR = tcol;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/outLineSize = 0.0
shader_param/outLineColor = Plane( 1, 1, 1, 1 )

[sub_resource type="Animation" id=4]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="box" type="Area2D" groups=[
"boxes",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.91061, 8.08739 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 0, -52.8387 )
texture = ExtResource( 2 )
centered = false
hframes = 6
frame = 5

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
anims/spawn = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.215

[connection signal="input_event" from="." to="." method="_on_player_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_box_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_box_mouse_exited"]
